resolved overlapping component css

--- a/src/styles/homedetails.css
+++ b/src/styles/homedetails.css
@@ -11,6 +11,7 @@
     grid-template-columns: 1fr 1fr;
     gap: 1em;
     margin: 1em;
+    height: auto;
 }
 
 /* home details grid row 1 */
@@ -20,7 +21,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    height: 44vh;
+    /* height: 44vh; */
 
 }
 
@@ -37,7 +38,7 @@
     align-items: center;
     justify-content: center;
     padding: 0 10% 0 5%;
-    height: 30vh;
+    /* height: 30vh; */
     border: solid 3px red;
 }
 
@@ -61,7 +62,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 30vh;
+    /* height: 30vh; */
 }
 
 .bedroom-prices-table {
@@ -87,7 +88,7 @@
     align-items: center;
     justify-content: center;
     padding: 0 10% 0 5%;
-    height: 30vh;
+    /* height: 30vh; */
     border: solid 3px orange;
 }
 
@@ -116,7 +117,7 @@
 .hd-det-loc-container {
     width: 100%;
     border: black solid 1px;
-    height: 44vh;
+    /* height: 44vh; */
 }
 
 .address-properties-container {
